--- a/index.html
+++ b/index.html
@@ -71,17 +71,20 @@
                     <div class="row text-center">
                         <div class="col-md-4 offset-md-8">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{TwitchLink}}" target="_blank"><i class="bi bi-twitch bi-icon-attr"></i></a>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{YouTubeLink}}" target="_blank"><i class="bi bi-youtube bi-icon-attr"></i></a>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{TwitterLink}}" target="_blank"><i class="bi bi-twitter bi-icon-attr"></i></a>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{InstagramLink}}" target="_blank"><i class="bi bi-instagram bi-icon-attr"></i></a>
+                                </div>
+                                <div class="col">
+                                    <a href="{{TikTokLink}}" target="_blank"><i class="bi bi-tiktok bi-icon-attr"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -132,6 +135,7 @@
                                             <p>This is one of the BIGGEST side projects I’ve worked on. This is a application that I wrote in attempt to learn more about file handling and modification. The general idea is to modify an existing video game. I've also included features such as a grid system, level swapping, statistics and tile data.</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-12">
                                             <h3>DEVELOPER TOOLS</h3>
@@ -153,6 +157,7 @@
                                             <img src="images/leveleditor/grid.png" />
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-xl-6 mb-2">
                                             <div class="row">
@@ -181,6 +186,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="col-xl-6">
                                             <div class="row">
@@ -220,6 +226,7 @@
                                             <p>I found myself heavily interested in learning more about API endpoints. Discord API is one of the craziest side projects I've gotten myself into. The idea is to create a single page application AND a bot in my Discord server!</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-xl-4">
                                             <div class="row">
@@ -244,6 +251,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-12">
                                             <h3>DRAWING CANVAS</h3>
@@ -258,6 +266,7 @@
                                             <img src="images/discord/canvas2.png" />
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="col-xl-6">
                                             <div class="row">
@@ -288,7 +297,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="content">
+                                <div class="content">            
                                     <div class="row">
                                         <div class="col-12">
                                             <h3>ABOUT</h3>
@@ -297,6 +306,7 @@
                                             <p>I have recently been working on developing artwork using Adobe Photoshop and After Effects to learn more about Adobe products. This range from static images to animated ones, particularly for my YouTube and Twitch streaming channels.</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="row">
                                             <div class="col-12">
@@ -306,6 +316,7 @@
                                                 <ul>
                                                     <li>Adobe Photoshop</li>
                                                     <li>Adobe After Effects</li>
+                                                    <li>Paint.Net</li>
                                                 </ul>  
                                             </div>
                                         </div>
@@ -318,6 +329,7 @@
                                             <img src="images/adobe/aftereffects.png" />
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="col-xl-6 mb-2">
                                             <div class="row">
@@ -371,6 +383,7 @@
                                             <p>Originally starting off with Sony Vegas, I experimented and started studying video editing. Eventually, I started using a free video editor called DaVinci Resolve. This is the MAIN tool that I currently use for my YouTube channel, which helps me with creating videos, small clips and highlights.</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="row">
                                             <div class="col-12">
@@ -392,6 +405,7 @@
                                             <img src="images/davinci/davinci2.jpg" />
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="col-12">
                                             <h3>YOUTUBE</h3>
@@ -425,6 +439,7 @@
                                             <p>The main focus at Cagenix is on dental work. Professionally, I worked closely with them on their main website, and their backend website as well.</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-xl-4">
                                             <div class="row">
@@ -452,6 +467,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-12">
                                             <h3>RESOURCE MANAGEMENT</h3>
@@ -492,6 +508,7 @@
                                             <p>This is one of the very first web development projects I worked on in college! My love for XML started with the SPSU GLSA project. This project is a small web application that is designed for the GLSA at SPSU to provide information regarding general updates and events with the club. They helped me host the website on their servers, and I would periodically provide updates.</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                                 <div class="col-12">
                                                     <h3>DEVELOPER TOOLS</h3>
@@ -515,6 +532,7 @@
                                             <img src="images/glsa/glsa2.jpg" />
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="col-12">
                                             <h3>HOW IT WORKS</h3>
@@ -547,6 +565,7 @@
                                             <p>This is the <b>VERY FIRST</b> web development project I've <b>EVER</b> worked on. The New is my baby. The primary focus behind this website was to design a message board system where users could interact with each other.</p>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-xl-4">
                                             <div class="row">
@@ -573,6 +592,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-xl-4">
                                             <div class="row">
@@ -590,6 +610,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-12">
                                             <h3>THE DATABASE</h3>
@@ -606,6 +627,7 @@
                                             <img src="images/thenew/phpmyadmin2.jpg" />
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row mb-2">
                                         <div class="col-xl-4">
                                             <div class="row">
@@ -628,6 +650,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr />
                                     <div class="row">
                                         <div class="col-xl-6 mb-2">
                                             <div class="row">
@@ -638,7 +661,10 @@
                                                     <p>Any registered members on the website are listed in its own page, which features page navigation! The color codes on each name have a meaning, indicating if they're a member, or a server moderator, or a server admin.</p>
                                                 </div>
                                                 <div class="col-12">
-                                                    <img src="images/thenew/thenew2.jpg" />
+                                                    <figure class="figure">
+                                                        <img src="images/thenew/thenew2.jpg" class="figure-img img-fluid rounded" alt="Member List">
+                                                        <figcaption class="figure-caption">This is a list of members.</figcaption>
+                                                    </figure>
                                                 </div>
                                             </div>
                                         </div>
@@ -690,17 +716,20 @@
                     <div class="row text-center">
                         <div class="col-md-4 offset-md-8">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{TwitchLink}}" target="_blank" style="font-size: 2.5rem; color: var(--bs-purple);"><i class="bi bi-twitch"></i></a>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{YouTubeLink}}" target="_blank" style="font-size: 2.5rem; color: var(--bs-red);"><i class="bi bi-youtube"></i></a>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{TwitterLink}}" target="_blank" style="font-size: 2.5rem; color: var(--bs-cyan);"><i class="bi bi-twitter"></i></a>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <a href="{{InstagramLink}}" target="_blank" style="font-size: 2.5rem; color: var(--bs-pink);"><i class="bi bi-instagram"></i></a>
+                                </div>
+                                <div class="col">
+                                    <a href="{{TikTokLink}}" target="_blank" style="font-size: 2.5rem; color: var(--bs-black);"><i class="bi bi-tiktok"></i></a>
                                 </div>
                             </div>
                         </div>
