level editor updates

--- a/leveleditor.html
+++ b/leveleditor.html
@@ -22,6 +22,7 @@
                                                 <li>C++</li>
                                                 <li>C# .NET Windows Forms</li>
                                                 <li>C# .NET WPF</li>
+                                                <li>Notepad++</li>
                                             </ul>  
                                         </div>
                                     </div>
