--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                                     <li><a class="dropdown-item" ng-click="ShowViewCagenix()" href="#ViewCagenix">Cagenix, Inc</a></li>
                                 </ul>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" target="_blank" href="./resume.html">Resume</a>
+                            </li>
                             <!--<li class="nav-item">
                                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                             </li>-->
